<resources>
    <string name="app_name">First Secure Plus</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login1">Login</string>
    <string name="sign_up_sign_in">Sign Up/Sign In</string>
    <string name="todo">todo</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="Phone_number">Phone Number</string>
    <string name="confirm">Confirm</string>
    <string name="mobile_number_verification">Mobile Number Verification</string>
    <string name="type_your_username">Type your Username</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="type_your_password">Type your Password</string>
    <string name="submit_any_id_proof_if_you_want_but_it_is_optional_and_if_you_submit_it_it_will_be_better_for_your_security">Submit Any Id Proof if you want but it is optional and if you submit it,It will be better for your security</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="logout">Logout</string>
    <string name="enter_the_mobile_number">Enter the mobile number</string>
    <string name="get_verification_code">Get Verification Code</string>
    <string name="enter_otp_code">Enter OTP code</string>
    <string name="Submit">Submit</string>
    <string name="todo1">TODO</string>
    <string name="give_answers_of_security_questions_this_will_help_you_at_the_time_of_cancelling_help_request">Give answers of Security Questions.This will help you at the time of cancelling help request</string>
    <string name="_1_enter_your_favourite_book_novel">1) Enter Your Favourite Book/Novel ?</string>
    <string name="_2_enter_your_favourite_cartoon_character">2) Enter Your Favourite Cartoon Character ?</string>
    <string name="_3_enter_your_favourite_place">3) Enter Your Favourite City ?</string>
    <string name="cartoon_character_like_doraemon">Cartoon-Character like Doraemon</string>
    <string name="book_novel_like_a_suitable_boy">Book/Novel like A Suitable Boy</string>
    <string name="city_like_jaipur_or_banglore">City like Jaipur or Banglore</string>
    <string name="you_can_change_add_and_remove_your_security_questions_after_successful_registration">You can change,add and remove your Security Questions after Successful Registration</string>
    <string name="confirm1">Confirm</string>
</resources>
