<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="28dp"
    android:background="#4BD151"
    android:orientation="vertical"
    tools:context=".SecurityQuestions">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="@string/give_answers_of_security_questions_this_will_help_you_at_the_time_of_cancelling_help_request"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="#3949AB"
        android:textStyle="bold"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:textSize="23sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:text="@string/_1_enter_your_favourite_book_novel" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="23dp"
        android:inputType="textNoSuggestions"
        android:hint="@string/book_novel_like_a_suitable_boy"
        android:textColorHint="#1E88E5"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:textSize="23sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:text="@string/_2_enter_your_favourite_cartoon_character" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="23dp"
        android:inputType="textNoSuggestions"
        android:hint="@string/cartoon_character_like_doraemon"
        android:textColorHint="#1E88E5"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:textSize="23sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:text="@string/_3_enter_your_favourite_place" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="23dp"
        android:inputType="textNoSuggestions"
        android:hint="@string/city_like_jaipur_or_banglore"
        android:textColorHint="#1E88E5"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:drawableLeft="@drawable/ic_info_black_24dp"
        android:drawablePadding="12dp"
        android:text="@string/you_can_change_add_and_remove_your_security_questions_after_successful_registration"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#F4511E"
        android:drawableStart="@drawable/ic_info_black_24dp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/confirm"
        android:background="@drawable/bg2"/>

</LinearLayout>