<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4BD151"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".Login">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/username"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg2"
        android:drawableStart="@drawable/ic_account_box_black_24dp"
        android:drawableLeft="@drawable/ic_account_box_black_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/type_your_username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#FFFFFF" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/password"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg2"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/type_your_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="#FFFFFF" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/forgot_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="23sp"
        android:layout_marginLeft="80dp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:layout_marginStart="70dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="237dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:text="@string/remember_me"
        android:textColor="#ffff"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg2"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:onClick="press"/>

</LinearLayout>