<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="28dp"
    android:background="#8E24AA"
    tools:context=".Register">

    <EditText
        android:id="@+id/editText"
        android:layout_width="268dp"
        android:layout_height="54dp"
        android:layout_margin="28dp"
        android:background="@drawable/bg1"
        android:ems="10"
        android:drawableLeft="@drawable/ic_account_circle_black_24dp"
        android:drawablePadding="23dp"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#A61ACC"
        android:drawableStart="@drawable/ic_account_circle_black_24dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="268dp"
        android:layout_height="54dp"
        android:layout_margin="28dp"
        android:background="@drawable/bg1"
        android:drawableLeft="@drawable/ic_account_circle_black_24dp"
        android:drawablePadding="23dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColorHint="#A61ACC"
        android:importantForAutofill="no"
        android:drawableStart="@drawable/ic_account_circle_black_24dp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="268dp"
        android:layout_height="54dp"
        android:background="@drawable/bg1"
        android:ems="10"
        android:layout_margin="28dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawablePadding="23dp"
        android:textColorHint="#A61ACC"
        android:importantForAutofill="no"
        android:drawableStart="@drawable/ic_lock_black_24dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="268dp"
        android:layout_height="54dp"
        android:background="@drawable/bg1"
        android:ems="10"
        android:layout_margin="28dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:textColorHint="#A61ACC"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawablePadding="23dp"
        android:importantForAutofill="no"
        android:drawableStart="@drawable/ic_lock_black_24dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="34dp"
            android:text="@string/previous"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:background="@drawable/bg"
            android:layout_marginStart="0dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="50dp"
            android:background="@drawable/bg"
            android:text="@string/next"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_marginStart="80dp" />
    </LinearLayout>
</LinearLayout>