<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="#21DDF4"
    android:orientation="vertical"
    tools:context=".Secondactivity">
    <TextView
        android:id="@+id/textView"
        android:layout_width="322dp"
        android:layout_height="99dp"
        android:layout_gravity="center"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="20dp"
        android:fontFamily="cursive"
        android:text="@string/sign_up_sign_in"
        android:textColor="#8E24AA"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="23dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button3"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="434dp"
            android:layout_marginRight="20dp"
            android:text="@string/register"
            android:textStyle="bold"
            android:background="@drawable/bg"
            android:layout_marginEnd="20dp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="434dp"
            android:background="@drawable/bg"
            android:text="@string/login"
            android:textStyle="bold"
            android:layout_marginStart="20dp" />
    </LinearLayout>



</LinearLayout>